--- a/style.css
+++ b/style.css
@@ -5,4 +5,23 @@ body{
     width: 100%;
     height: 100vh;
     background: #242424;
+    position: relative;
+}
+span{
+    position: absolute;
+    border-radius: 50%;
+    animation: anim 1s linear infinite;
+    transform: translate(-50%,-50%);
+}
+@keyframes anim{
+    0%{
+       width: 0;
+       height: 0;
+       border: 1px solid #fff;
+    }
+    100%{
+     width: 100px;
+     height: 100px;
+     border: 1px solid rgba(255,255,255,0);
+    }
 }
